# ADAROUN-JORGE

itcl-quantization-toolkit/: .gitignore
itcl-quantization-toolkit/demo/: pyproject.toml
itcl-quantization-toolkit/inference_engine/itcl_inference_engine/: __init__.py  __test_models.py  abs_tanh_linear.json  infer_iris.py  infer_mnist.py  infer_tanh_regression.py  infer_x3_regression.py  linespace.npy  mnist.json  pyproject.toml
itcl-quantization-toolkit/inference_engine/itcl_inference_engine/layers/common/: ILayer.py  IOperator.py  LUT_activaton.py  Relu.py  SigmoidLUT.py  TanhLUT.py
itcl-quantization-toolkit/inference_engine/itcl_inference_engine/layers/onnx/: DequantizeLinear.py  QLinearAdd.py  QLinearMatMul.py  QLinearSigmoid.py  QuantizeLinear.py  Softmax.py  Tanh.py  buildOperator.py
itcl-quantization-toolkit/inference_engine/itcl_inference_engine/layers/tflite/: Dequantize.py  FullyConnected.py  Logistic.py  Quantize.py  SoftMax.py  Tanh.py  buildLayer.py
itcl-quantization-toolkit/inference_engine/itcl_inference_engine/models/onnx/: mnist_relu_uint8.json  mnist_sigmoid_uint8.json  mnist_tanh_uint8.json
itcl-quantization-toolkit/inference_engine/itcl_inference_engine/models/tflite/: mnist_high_complexity_float32_tanh.json  mnist_high_complexity_float32_tanh_quant_deq_in_out_layers.json  mnist_low_complexity_float32_relu.json  mnist_low_complexity_float32_relu_quant_deq_in_out_layers.json  mnist_medium_complexity_float32_sigmoid.json  mnist_medium_complexity_float32_sigmoid_quant_deq_in_out_layers.json  x3tflite.json
itcl-quantization-toolkit/inference_engine/itcl_inference_engine/network/: Network.py
itcl-quantization-toolkit/inference_engine/itcl_inference_engine/util/: abs_tanh_linear.json  checkLayerType.py  quantization.py
itcl-quantization-toolkit/quantizer/itcl_quantizer/: abs_tanh_linear_kernel_int8_rest_int16.json  mnist.json  pyproject.toml  quantize_mnist.py  quantize_regression_x3.py  quantize_wind_speed.py
itcl-quantization-toolkit/quantizer/itcl_quantizer/config/models/: keras.py
itcl-quantization-toolkit/quantizer/itcl_quantizer/config/samples/: _create_samples.py
itcl-quantization-toolkit/quantizer/itcl_quantizer/equalizers/adaround/: adaround.py  annealer.py  iround_optimizer.py  irounding_policy.py
itcl-quantization-toolkit/quantizer/itcl_quantizer/tensor_extractor/: abstract_layer.py  operator.py  tensor.py
itcl-quantization-toolkit/quantizer/itcl_quantizer/util/: network.py
(+71 files in other folders)
