[tool.poetry]
name = "itcl_inference_engine"
version = "0.1.0"
description = "ITLC Inference Engine"
authors = ["ITCL"]

[tool.poetry.dependencies]
python = ">=3.10 <3.11"
numpy = "^1.23.1"
itcl-quantization-toolkit = { path = "../../core/", develop = true }
itcl-quantization-toolkit-inference-engine = { path = "../", develop = true }
typing-extensions = "^4.3.0"
tensorflow = "^2.9.1"
matplotlib = "^3.5.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
ipython = "^8.4.0"
ipykernel = "^6.15.1"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

